<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Consulta"
    android:background="@drawable/green_gradient_color">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonHome"
        android:layout_width="34dp"
        android:layout_height="38dp"
        android:clickable="true"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tiny_house"/>

    <EditText
        android:id="@+id/editTextPesquisar"
        style="@style/green_text"
        android:layout_width="269dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/pesquisar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButtonHome" />

    <ImageButton
        android:id="@+id/imageButtonPesquisar"
        android:layout_width="40dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toEndOf="@+id/editTextPesquisar"
        app:layout_constraintTop_toTopOf="@+id/editTextPesquisar"
        app:srcCompat="@android:drawable/ic_menu_search"
        android:backgroundTint="@color/green_900"/>

    <TextView
        android:id="@+id/textViewContatos"
        style="@style/green_text"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/contatos"
        android:textAlignment="inherit"
        app:layout_constraintStart_toStartOf="@+id/editTextPesquisar"
        app:layout_constraintTop_toBottomOf="@+id/editTextPesquisar" />

    <Button
        android:id="@+id/buttonContatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/exibirTodos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContatos" />

</androidx.constraintlayout.widget.ConstraintLayout>